--- a/deploy/s2i-custom-notebook-image-stream.yaml
+++ b/deploy/s2i-custom-notebook-image-stream.yaml
@@ -3,9 +3,9 @@ apiVersion: image.openshift.io/v1
 metadata:
   annotations:
     opendatahub.io/notebook-image-desc: >-
-      JupyterLab notebook image with Streamlit.
+      Custom JupyterLab notebook image.
     opendatahub.io/notebook-image-name: Custom Notebook - Noah
-    opendatahub.io/notebook-image-url: 'https://github.com/guimou/custom-notebooks/tree/main/streamlit-notebook'
+    opendatahub.io/notebook-image-url: 'https://github.com/noahsa/odh-custom-notebook'
   name: custom-odh-notebook-noah
   labels:
     component.opendatahub.io/name: jupyterhub
@@ -18,10 +18,10 @@ spec:
     - name: latest
       annotations:
         opendatahub.io/notebook-python-dependencies: >-
-          [{"name":"Streamlit","version":"1.9.2"},{"name":"Jupyter Server Proxy","version":"3.2.1"}]
-        opendatahub.io/notebook-software: '[{"name":"BYO Notebook Image - Streamlit","version":"1.9.2"},{"name":"Python","version":"3.9.2"}]'
+          [{"name":"Pytorch","version":"^1.10"}]
+        opendatahub.io/notebook-software: '[{"name":"Custom Notebook Image - Noah","version":"1"},{"name":"Python","version":"3.9.2"}]'
       from:
         kind: DockerImage
-        name: 'quay.io/nsayre/s2i-generic-data-science-streamlit-notebook:latest'
+        name: 'quay.io/nsayre/custom-notebook:latest'
       referencePolicy:
         type: Source
